6660258: Java application stops Windows logout/shutdown (regression in 1.5.0_14)

Reviewed-by: anthony, art, uta